--- a/index.html
+++ b/index.html
@@ -20,28 +20,71 @@
 
     <section class="main-content">
       <h1>
-<a id="vagrant-phalcon-php7" class="anchor" href="#vagrant-phalcon-php7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vagrant Phalcon PHP7</h1>
-
-<p>inside:</p>
-
-<ul>
-<li>Nginx</li>
-<li>PHP7</li>
-<li>Phalcon 2.1.x</li>
-<li>PHP-FPM</li>
-<li>MySQL 5.7</li>
-<li>Redis</li>
-<li>Composer</li>
-</ul>
-
-<p>and:</p>
+<a id="ubuntu-1604-vagrant-vm-phalcon-3--php-7" class="anchor" href="#ubuntu-1604-vagrant-vm-phalcon-3--php-7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ubuntu 16.04 Vagrant VM: Phalcon 3 + PHP 7</h1>
 
 <ul>
 <li>Git</li>
-<li>Zephir</li>
-<li>mc</li>
-<li>htop</li>
+<li>Nginx</li>
+<li>PHP7</li>
+<li>Phalcon</li>
+<li>MySQL</li>
+<li>Redis</li>
+<li>Composer</li>
+<li>NodeJS</li>
+<li>Npm</li>
+<li>Gulp</li>
+<li>PHPUnit</li>
 </ul>
+
+<h1>
+<a id="quick-install" class="anchor" href="#quick-install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Quick install</h1>
+
+<ol>
+<li>Install <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>
+</li>
+<li>Install <a href="https://www.vagrantup.com/">Vagrant</a>
+</li>
+<li>Clone this project <code>git clone https://github.com/uonick/vagrant-php7-phalcon.git</code>
+</li>
+<li>Go to directory with README file (<code>cd vagrant-php7-phalcon</code>)</li>
+<li>Run <code>vagrant up</code>
+</li>
+<li>Run on host machine:
+
+<ul>
+<li>Linux:
+
+<ul>
+<li><code>sudo apt-get install dnsmasq</code></li>
+<li><code>echo "address=/.dev/192.168.3.3" &gt;&gt; /etc/dnsmasq.conf</code></li>
+</ul>
+</li>
+<li>macOS:
+
+<ul>
+<li><code>brew install dnsmasq</code></li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<g-emoji alias="tada" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f389.png" ios-version="6.0">🎉</g-emoji> <g-emoji alias="balloon" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f388.png" ios-version="6.0">🎈</g-emoji>
+</li>
+</ol>
+
+<h1>
+<a id="development" class="anchor" href="#development" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Development</h1>
+
+<ol>
+<li>Go to <code>vagrant-php7-phalcon/www/</code>
+</li>
+<li>Make <code>directory</code>
+</li>
+<li>Open url <code>http://directory.dev/</code>
+</li>
+<li>Enjoy <g-emoji alias="sunglasses" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60e.png" ios-version="6.0">😎</g-emoji>
+</li>
+</ol>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/uonick/vagrant-php7-phalcon">Vagrant-php7-phalcon</a> is maintained by <a href="https://github.com/uonick">uonick</a>.</span>
